--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
              <a href="">Let's Talk</a>  
         </section>
 
-        <nav>
-            <a href="">facebook</a>
-            <a href="">LinkIn</a>
-            <a href="">twetter</a>
-            <a href="">facebook</a>
-            <a href="">facebook</a>
-        </nav>
+        <aside>
+            <button>F</button>
+            <button>in</button>
+            <button>x</button>
+            <button>P</button>
+            <button>Email</button>
+        </aside>
 
         <main>
             <section>
@@ -156,30 +156,85 @@ You should also recognize that most users who initially visit your website are n
                 <article>
                     <h2>HubSpot Services</h2>
                     <a href="">HubSpot Onboarding</a>
-                    <a href="">HubSpot Onboarding</a>
-                    <a href="">HubSpot Onboarding</a>
-                    <a href="">HubSpot Onboarding</a>
-                    <a href="">HubSpot Onboarding</a>
+                    <a href="">HubSpot Admin</a>
+                    <a href="">Marketing Hub</a>
+                    <a href="">Sales Hub</a>
+                    <a href="">Service Hub</a>
+                    <a href="">Content Hub</a>
+                    <a href="">Commerce Hub</a>
+                    <a href="">Operations Hub</a>
+                    <a href="">Integrations & Migrations</a>
+                    <a href="">HubSpot Training</a>
+                </article>
+                <article>
+                     <h2> About</h2>
+                    <a href="">Our Story</a>
+                    <a href="">Meet the Team</a>
+                    <a href="">Partnerships</a>
+                    <a href="">Events</a>
+                    <a href="">Press</a>
+                    <a href="">Careers</a>
+                    <a href="">SmartBug Culture</a>
+                    <a href="">SmartBug Palooza</a>
+                    <a href="">Our Core Values</a>
+                </article>
+                <article>
+                    <h2>AI & Tech Services</h2>
+                    <a href="">AI Agents & Development</a>
+                    <a href="">Website Development</a>
+                    <a href="">E-commerce</a>
+                    <a href="">Web Apps</a>
+                    <a href="">Integrations & Migrations</a>
+                </article>
+                <article>
+                    <h2>Platforms</h2>
+                    <a href="">WordPress</a>
+                    <a href="">Craft CMS</a>
+                    <a href="">Magento / Adobe Commerce</a>
+                    <a href="">Shopify</a>
+                    <a href="">HubSpot</a>
+                </article>
+                <article>   
+                    <h2>Solutions</h2>
+                    <a href="">Demand Generation</a>
+                    <a href="">Sales enablement</a>
+                    <a href="">Paid Media</a>
+                    <a href="">Revenue Operations</a>
+                    <a href="">Customer success</a>
+                </article>
+                <article>
+                    <h2>Industries</h2>
+                    <a href="">Healthcare</a>
+                    <a href="">Senior Living</a>
+                    <a href="">Manufacturing</a>
+                    <a href="">SaaS</a>
+                    <a href="">Finance</a>
+                    <a href="">Franchise</a>
+                    <a href="">Education</a>
+                </article>
+                <article>
+                     <h2>Work & Awards</h2>
+                     <a href="">Case Studies</a>
+                     <a href="">Portfolio</a>
+                     <a href="">Client Testimonials</a>
+                     <a href="">Awards</a>
+                     <a href="">Press</a>
+                </article>
+                <article>
+                    <h2>Resources</h2>
+                    <a href="">Articles</a>
+                    <a href="">E-Books</a>
+                    <a href="">Templates</a>
+                    <a href="">Webinars</a>
+                    <a href="">Podcasts</a>
+                    <a href="">Bootcamps</a>
+                    <a href="">Assessments</a>
                 </article>
             </section>
         </footer>
 
 
     </header>
-
-
-    
-
-
-
-
-
-
-
-
-
-
-
 
 
 </body>
